# h2p-tool

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Icon.svelte  Options.svelte
